# Atticus

./: .coverage.DESKTOP-1LU6MF0.11072.XhuCMfKx  .coverage.DESKTOP-1LU6MF0.12196.XEVjROEx  .coverage.DESKTOP-1LU6MF0.17044.XLquAWkx  .coverage.DESKTOP-1LU6MF0.17156.XxJwOYzx  .coverage.DESKTOP-1LU6MF0.1880.XoApHXZx  .coverage.DESKTOP-1LU6MF0.19644.XoSBpSYx  .coverage.DESKTOP-1LU6MF0.20344.XhlDfJtx  .coverage.DESKTOP-1LU6MF0.20536.XXgPWfox  .coverage.DESKTOP-1LU6MF0.20624.XUIrGSMx  .coverage.DESKTOP-1LU6MF0.2088.XKQCMcPx  .coverage.DESKTOP-1LU6MF0.22556.XPtZrVmx  .coverage.DESKTOP-1LU6MF0.23544.XnORPxGx  .coverage.DESKTOP-1LU6MF0.24796.XqtavtYx  .coverage.DESKTOP-1LU6MF0.25644.XKSMSALx  .coverage.DESKTOP-1LU6MF0.26108.XrVAmMhx  .coverage.DESKTOP-1LU6MF0.28732.XaylHZqx  .coverage.DESKTOP-1LU6MF0.29316.XBwwVuMx  .coverage.DESKTOP-1LU6MF0.30384.XAbFSoKx  .coverage.DESKTOP-1LU6MF0.30608.XmrIyapx  .coverage.DESKTOP-1LU6MF0.31076.XcqUyGDx  .coverage.DESKTOP-1LU6MF0.31508.XvoRUexx  .coverage.DESKTOP-1LU6MF0.3332.XvKLSNmx  .coverage.DESKTOP-1LU6MF0.34360.XYHlvbcx  .coverage.DESKTOP-1LU6MF0.36552.XXJKBNUx  .coverage.DESKTOP-1LU6MF0.36744.XJlMPTVx  .coverage.DESKTOP-1LU6MF0.43328.XmCOpzrx  .coverage.DESKTOP-1LU6MF0.5716.XBTLbBox  .coverage.DESKTOP-1LU6MF0.784.XPPCAbyx  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ALL_CODE.md  ALL_DOCS.md  (+74 more)
.github/workflows/: auto-fix-ruff.yml  eval-gate.yml  lint-test.yml  release.yml  repo-guards.yml
_backup_phase4_20251017-184331/tests/: TOKEN_EVAL.xlsx  test_api_errors.py  test_chat_route.py  (+11 more)
admin/: next.config.js  package.json  tsconfig.json
adr/: 0001-record-architecture-decisions.md
api/: Dockerfile  __init__.py  dependencies.py  errors.py  main.py  middleware.py  rate_limit.py  schemas.py  security.py  utils.py
app/: README.md  components.json  globals.css  layout.tsx  package.json  page.tsx  pnpm-lock.yaml  providers.tsx  tailwind.config.ts
atticus/: __init__.py  config.py  embedding.py  embeddings.py  evaluation.py  faiss_index.py  glossary.py  logging.py  logging_utils.py  metrics.py  retrieval.py  tokenization.py  vector_db.py
components/: AnswerRenderer.tsx  page-header.tsx  site-footer.tsx  site-header.tsx
core/: __init__.py  config.py
docs/: ADMIN_SERVICE.md  AGENTS.md  APP_FLOW.md  ARCHITECTURE.md  ATTICUS_COMPONENT_MAP.md  ATTICUS_DETAILED_GUIDE.md  AUDIT_REPORT.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  README.md  REFERENCE.md  RELEASE.md  REMOTE_ACCESS.md  REQUIREMENTS.md  SECURITY.md  SSO_BOUNDARY.md  STYLEGUIDE.md  TROUBLESHOOTING.md  audit_consolidated.md  glossary-spec.md  it-walkthrough.md  root-overview.md
eval/: 4o_mini_ac7070_token_eval_atticus.csv  __init__.py  baseline.json  ced-362-smoke.csv  gold_set.csv  gpt5_ac7070_token_eval_atticus.csv  runner.py
evaluation/: gold_set.csv
examples/: dev.http
indices/: model_catalog.json  prompts.json
infra/: README.md
ingest/: __init__.py  chunker.py  models.py  pipeline.py
lib/: ask-client.ts  ask-contract.ts  auth.ts  batch-csv.ts  browser-download.ts  chat-capture.ts  content-manager.ts  id.ts  prisma.ts  rbac.ts  request-context.ts  rls.ts  sse-events.ts  trace-headers.ts  utils.ts
logs/: app.jsonl
nginx/: Dockerfile  nginx.conf
prisma/: schema.prisma  seed.ts
reports/: README.md  admin-service-init.txt  api-version.txt  auth-removal-summary.txt  autodoc-summary.txt  content-manager-summary.txt  doc-update-summary.txt  eslint-combined.txt  eslint-out.txt  gpt4_1_ac7070_token_eval_atticus.csv  graph.json  inventory.txt  markdownlint.txt  md-links-C__Dev_Atticus_docs_AGENTS_md.txt  md-links-C__Dev_Atticus_docs_ARCHITECTURE_md.txt  md-links-C__Dev_Atticus_docs_RELEASE_md.txt  md-links-C__Dev_Atticus_docs_REQUIREMENTS_md.txt  md-links-C__Dev_Atticus_docs_STYLEGUIDE_md.txt  md-links-C__Dev_Atticus_docs_api_README_md.txt  md-links-docs.txt  md-links-readme.txt  md-links-root.txt  next-build-out.txt  npm-audit-initial.json  npm-outdated.txt  phase2-errors.txt  prettier.txt  refactor-summary.txt  rotate-secrets-checklist.txt  sample-eval.csv  sample-eval.html  todo-phase-0-baseline.md  tsc-out.txt
retriever/: __init__.py  answer_format.py  citation_utils.py  generator.py  models.py  prompts.py  query_splitter.py  resolver.py  service.py  vector_store.py
schemas/: sse-events.schema.json
scripts/: atticus_cli.py  audit_unused.py  check_backup_integrity.py  check_version_parity.py  chunk_ced.py  db_backup.py  db_restore.py  db_seed.py  db_verify.py  dead_code_audit.py  debug_env.py  dump_all_files.ps1  e2e_smoke.py  eval_qa.py  eval_run.py  export_code_listing.py  export_repo.py  generate_api_docs.py  generate_compendiums.py  generate_env.py  icon-audit.mjs  ingest.py  ingest_cli.py  list_make_targets.py  log_escalation.py  log_todo_completion.py  make_seed.py  next_ae_id.py  prisma_cli.py  rollback.md  rollback.py  route-audit.mjs  run-knip-audit.mjs  run_ingestion.py  run_token_eval.py  send_email.py  smtp_test.py  test_health.py  ui_ping.py  update_changelog_from_todos.py  (+2 more)
seeds/: README.md  seed_manifest.json
tests/: ac7070_TOKEN_EVAL.xlsx  conftest.py  test_admin_route.py  test_answer_format.py  test_api_errors.py  test_api_version.py  test_chat_route.py  test_chat_verbose.py  test_chunker.py  test_citation_dedupe.py  test_citation_utils_extra.py  test_config_reload.py  test_config_validation.py  test_contact_route.py  test_contact_route_trace.py  test_environment_diagnostics.py  test_error_schema.py  test_escalation.py  test_eval_metrics.py  test_eval_runner.py  test_glossary_hits.py  test_hashing.py  test_ingestion_retrieval_integration.py  test_logging_utils.py  test_mailer.py  test_metrics.py  test_model_parser.py  test_prompt_templates.py  test_prompts.py  test_query_splitter.py  test_rate_limit.py  test_retrieval_filters.py  test_retriever_structuring.py  test_seed_manifest.py  test_smoke.py  test_sse_events.py  test_trusted_gateway_middleware.py  test_ui_route.py
web/: index.html  main.js  styles.css
(+263 files in other folders)
