[project]
name = "atticus"
version = "0.2.3"
description = "Atticus Retrieval-Augmented Generation service"
readme = "README.md"
authors = [{ name = "Atticus Ops", email = "ops@example.com" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pip-tools",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-sugar>=0.9.7",
  "pytest-xdist>=3.5",
  "pydantic>=2.7",
  "types-requests",
  "types-PyYAML",
  "pre-commit>=3.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atticus", "api", "ingest", "retriever", "eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF", "PL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415", "I001"]
"retriever/generator.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["atticus", "api", "ingest", "retriever", "eval"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = ["scripts/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests", "eval/harness"]
markers = ["eval: evaluation harness"]
filterwarnings = [
  # Safe to ignore: upstream SWIG/PyMuPDF deprecation noise
  "ignore:.*SwigPyPacked.*:DeprecationWarning",
  "ignore:.*SwigPyObject.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["atticus", "api", "retriever"]
omit = [
  # Temporarily exempted modules pending integration tests
  "api/routes/ask.py",
  "atticus/config.py",
  "atticus/logging.py",
  "atticus/embeddings.py",
  "atticus/faiss_index.py",
  "atticus/metrics.py",
  "atticus/tokenization.py",
  "atticus/notify/mailer.py",
  "retriever/generator.py",
  "retriever/vector_store.py",
  "retriever/service.py",
  "api/routes/admin.py",
  "api/routes/eval.py",
  "api/routes/ingest.py",
  "api/routes/health.py",
  "api/dependencies.py",
  "api/middleware.py",
  "api/utils.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
