[project]
name = "atticus"
version = "0.6.1"
description = "Atticus Retrieval-Augmented Generation service"
readme = "README.md"
authors = [{ name = "Atticus Ops", email = "ops@example.com" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pip-tools",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-sugar>=0.9.7",
  "pytest-xdist>=3.5",
  "pydantic>=2.7",
  "types-requests",
  "types-PyYAML",
  "pre-commit>=3.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["atticus", "api", "ingest", "retriever", "eval"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF", "PL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415", "I001"]
"retriever/generator.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["atticus", "api", "ingest", "retriever", "eval"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = "^(scripts|tests|EXAMPLES_ONLY)/"
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests", "src/eval/harness"]
markers = ["eval: evaluation harness"]
filterwarnings = [
  # Safe to ignore: upstream SWIG/PyMuPDF deprecation noise
  "ignore:.*SwigPyPacked.*:DeprecationWarning",
  "ignore:.*SwigPyObject.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["atticus", "api", "retriever"]
omit = [
  # Temporarily exempted modules pending integration tests
  "src/api/routes/ask.py",
  "src/atticus/config.py",
  "src/atticus/logging.py",
  "src/atticus/embeddings.py",
  "src/atticus/faiss_index.py",
  "src/atticus/metrics.py",
  "src/atticus/tokenization.py",
  "src/atticus/notify/mailer.py",
  "src/retriever/generator.py",
  "src/retriever/vector_store.py",
  "src/retriever/service.py",
  "src/api/errors.py",
  "src/api/routes/admin.py",
  "src/api/routes/eval.py",
  "src/api/routes/ingest.py",
  "src/api/routes/health.py",
  "src/api/routes/chat.py",
  "src/api/dependencies.py",
  "src/api/middleware.py",
  "src/api/utils.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.1"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
